<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lio.hichinrui.MainMenu">

    <!-- TODO back buttons -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:textAppearance="@style/text_style1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:text="@string/button1"
            android:textAppearance="@style/text_style2"
            android:id="@+id/button_text"
            android:gravity="center"
            android:background="@drawable/main_menu_button"
            android:onClick="nextPage"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:text="@string/button2"
            android:textAppearance="@style/text_style2"
            android:id="@+id/button_buttons"
            android:gravity="center"
            android:background="@drawable/main_menu_button"
            android:onClick="nextPage"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:text="@string/button3"
            android:textAppearance="@style/text_style2"
            android:id="@+id/button_pictures"
            android:gravity="center"
            android:background="@drawable/main_menu_button"
            android:onClick="nextPage"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:text="@string/button4"
            android:textAppearance="@style/text_style2"
            android:id="@+id/button_videos"
            android:gravity="center"
            android:background="@drawable/main_menu_button"
            android:onClick="nextPage"/>
    </LinearLayout>
</RelativeLayout>
